dungeon.css
/* ... */
/* hide icon to close sidebar */
#right-sidebar > .flex-h-box {
    display: none;
}

/* spacing and scrolling */
.sidebar-content > * {
    /* dave override */
    margin: 0 !important;
    overflow-x: visible;
    /*overflow-y: auto !important;*/
    max-height: 100vh;
    /* dave override */
    padding: 30px 0px 100px 20px;

    /* pesky bottom border/outline in chrome won't go away! */
    /* this does not fix it */
    border: none !important;
    outline: none !important;
}
.sidebar-content > *:last-child {
    padding-right: 20px;
}

.sidebar-content {
    visibility: visible;
    display: flex !important;
    flex-direction: var(--page-order) !important;
    align-items: flex-start; /* allow pages to have their own height */
    justify-content: flex-end;
}

.roam-center > div:not(.rm-dnd-separator):first-child {
    padding: 0 !important;
}
.roam-body-main > * {
    display: inline-block;
}

.sidebar-content > *:not(.rm-dnd-separator) {
    display: block !important;
    margin-bottom: 200px;
    flex-shrink: 0;
}

/* dave override */
.window-headers {
    margin-top: -44px;
    padding: 0px 24px 58px 60px;
}
.window-headers .bp3-button {
    color: var(--icon-color) !important;
}
.window-headers .bp3-popover-wrapper {
    position: relative;
}

.window-headers > * {
    position: relative;
    top: 56px;
    right: 12px;
}

.bp3-icon-pin {
    display: none;
}

.window-headers + div > div:first-child {
    margin-top: -35px !important;
    margin-right: -46px !important;
}

/* dave override don't use style selector [style*="margin-left:"][style*="margin-right:"] */
.sidebar-content > div > div {
    margin-left: 0 !important;
    margin-right: 0 !important;
    padding: 0 !important;
    /* dave override margin-bottom: 100px; */
}

.sidebar-content > *:not(.rm-dnd-separator) > .flex-h-box {
    display: block !important;

    padding: 15px 10px !important;
}
.sidebar-content > *:not(.rm-dnd-separator) > div:not(.rm-dnd-separator) {
    background: var(--page-color);
}
.sidebar-content > *:not(.rm-dnd-separator) > div:not(.rm-dnd-separator):first-child {
    border-radius: 10px 10px 0px 0px;
}
.sidebar-content > *:not(.rm-dnd-separator) > div:not(.rm-dnd-separator):first-child:last-child {
    border-radius: 10px;
}
.sidebar-content > *:not(.rm-dnd-separator) > div:not(.rm-dnd-separator) > div:last-child:not(:first-child) {
    border-radius: 0px 0px 10px 10px;
    padding-bottom: 50px !important;
}
.sidebar-content > div:not(.rm-dnd-separator) > div:not(.rm-dnd-separator):not(.flex-h-box) {
    padding: 0px 50px 0px 40px;
}
.sidebar-content > div:not(.rm-dnd-separator) > .flex-h-box > .bp3-button, #roam-right-sidebar-content .flex-h-box > .bp3-popover-wrapper {
    margin: auto !important;
    width: 20px !important;
    text-align: center;

}

/* dave override don't use [style*="padding-bottom: 8px"] */
.sidebar-content > div > div > div:last-child {
    padding: 8px 40px !important;
}

/* fix positioning problems with menu icon */
.roam-topbar *[class*="icon-menu"]::before {
    position: absolute !important;
    top: 4px !important;
    left: 4px !important;
}
.roam-topbar .bp3-icon-menu-open::before {
    content: ""; /* prevent menu icon from changing on hover */
}


.window-headers:hover {
    background-color: rgba(var(--color-primary), 0.1);
}

.sidebar-content > .rm-dnd-separator .rm-dnd-drop-area {
    z-index: 999999999999;
    position: fixed;
    top: 0;
    width: 100% !important;*/
    width: 50px !important;
    height: 100vh !important;
    /*background-color: rgba(255, 0, 0, 0.1) !important;*/

}
.sidebar-content > div > .rm-dnd-separator {
    position: absolute;
    top: 0;
    left: 0;
    max-width: 100px !important;
}
.sidebar-content > div > .rm-dnd-separator .rm-dnd-drop-area {
    position: absolute !important;
    top: 0;
    z-index: 10000;
    height: 100vh !important;
    /*border-left: 20px solid #FF0099 !important;*/
    box-shadow: none;
    /*transform: translateX(-30px);*/
}
.rm-dnd-drop-area {
    position: absolute;
    background-color: rgba(var(--color-primary), 0.1) !important;
    margin-left: -60px !important;
    width: 100px;
    max-width: 100px;
}
.rm-dnd-drop-bar {
    margin-left:-15px;
    width: 10px !important;
    height: 100vh !important;
    background-color: rgba(var(--color-primary), 1) !important;
    box-shadow: 0px 0px 50px rgba(var(--color-primary), 1);

}
.sidebar-content > .rm-dnd-separator {
    margin-left: -20px;
}
.sidebar-content > .rm-dnd-separator > .rm-dnd-drop-area {
    position: absolute;
}


/*.rm-dnd-drop-area::before {
    content: "";
    position: absolute;
    top: 0;
    right: 40px;
    height: 100vh;
    border-right: 10px solid var(--color-primary);
    box-shadow: 0px 0px 100px #FF0000;
}

.rm-dnd-drop-area:-moz-drag-over:before {
    content: "";
    position: absolute;
    top: 0;
    right: 40px;
    height: 100vh;
    border-right: 10px solid #FF0000;
    box-shadow: 0px 0px 100px #FF0000;
}*/

/*.rm-dnd-drop-area:-moz-drag-over {
    background-color: rgba(255, 0, 0, 0.5) !important;
}*/

.ghost {
    opacity: 1;
    background: none;
}

/* -------------------------- */
/*        LEFT SIDEBAR        */
/* -------------------------- */

/* HIDE LOGO*/
#roam-sidebar-logo {
    display: none;
}

.roam-sidebar-content * {
    color: var(--icon-color) !important;
}

.starred-pages > a > .page:hover {
    background-color: transparent !important;
    color: rgb(var(--primary-color)) !important;
}
.log-button * {
    /* this did not do what I expected */
    /* but it accomplished what I wanted */
    color: rgb(var(--primary-color)) !important;
}
.log-button {
    background: none !important;
}
.log-button:hover, .log-button:hover * {
    color: var(--text-color) !important;
}
.roam-sidebar-content {
    color: var(--text-color) !important;
}
/* ... */

